build/prod/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ui-ingress
  namespace: rabbitmq
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: rabbitmq.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmqop
            port:
              number: 15672
